# fastapi-test

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  noxfile.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2c5d45cff580_.py  6928fdeff6fb_.py  85bda85aeecc_.py  cb9d34046f08_.py  e5cb8f2287a1_.py
app/: __init__.py  config.py  main.py  prestart.sh
app/audits/: __init__.py  audit_database.py  audit_request.py
app/database/: check_is_ready.py
app/dependencies/: __init__.py  current_user.py
app/endpoints/: __init__.py  item.py  login.py  user.py
app/middlewares/: __init__.py  audit_database.py  audit_request.py  audit_request_middleware.py
app/models/: __init__.py  item.py  user.py
app/repositories/: __init__.py  item.py  user.py
app/schemas/: __init__.py  item.py  user.py
app/services/: __init__.py  auth.py  item.py  user.py
app/utils/: __init__.py  security.py
