[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = "FastAPI test"
authors = ["Edgar <edgarvaldez99@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
