[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = "FastAPI test"
authors = ["Edgar <edgarvaldez99@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
python-decouple = "^3.4"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
isort = "^5.9.3"
black = "^21.7b0"
pytest = "^6.2.4"
coverage = "^5.5"
pre-commit = "^2.14.1"
types-aiofiles = "^0.1.9"
types-orjson = "^3.6.0"
types-ujson = "^0.1.1"
nox = "^2021.6.12"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
